--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
         font-size: 100%;
         margin: 0;
       }
+
+      .tilefill .highlight {
+        background: #fff;
+        font-weight: bold;
+      }
+
+      .tile ul {
+        text-align: center;
+        padding: 0;
+        list-style-type: none;
+      }
     </style>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="tilefill.js"></script>
@@ -24,61 +35,34 @@
   </head>
   <body>
     <section class="tilefill">
-      <div class="tile">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile highlight">
         <div>
-          <p class="title">tile</p>
+          <p class="title">Hi</p>
         </div>
       </div>
-      <div class="tile">
+      <div class="tile highlight">
         <div>
-          <p class="title">tile</p>
+          <p class="title">I'm Edwin</p>
+          <ul>
+            <li><a href="https://github.com/ehmorris/jQuery.tilefill">View the github repo</a></li>
+            <li><a href="http://twitter.com/ehmorris">Follow me on twitter</a></li>
+            <li><a href="http://ehmorris.com">Visit my website</a></li>
+          </ul>
         </div>
       </div>
-      <div class="tile">
+      <div class="tile highlight">
         <div>
-          <p class="title">tile</p>
+          <p class="title">Thanks for checking out jQuery.tilefill!</p>
         </div>
       </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
-      <div class="tile">
-        <div>
-          <p class="title">tile</p>
-        </div>
-      </div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
     </section>
   </body>
 </html>
