cleaned up some CSS, added a desc to the demo page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
       .tilefill .highlight {
         background: #fff;
         font-weight: bold;
+        line-height: 1.25em;
+        text-align: center;
+      }
+
+      .desc {
+        font-weight: normal;
+        margin: 1em 2em;
       }
 
       .tile ul {
-        text-align: center;
-        padding: 0;
         list-style-type: none;
+        padding: 0;
       }
     </style>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -56,6 +62,7 @@
       <div class="tile highlight">
         <div>
           <p class="title">Thanks for checking out jQuery.tilefill!</p>
+          <p class="desc">It's a plugin that tiles the children of a container so that they fill the height and width of their parent. Try it with different numbers of children.</p>
         </div>
       </div>
       <div class="tile"></div>
