removed some unnessesary text

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="tile highlight">
         <div>
           <p class="title">Thanks for checking out jQuery.tilefill!</p>
-          <p class="desc">It's a plugin that tiles the children of a container so that they fill the height and width of their parent. Try it with different numbers of children.</p>
+          <p class="desc">It's a plugin that tiles the children of a container so that they fill the height and width of their parent.</p>
         </div>
       </div>
       <div class="tile"></div>
