--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       }
 
       .select_boxes {
-        background: rgba(0,0,0,.4);
+        background: rgba(0,0,0,.5);
+        color: #fff;
         left: 0;
         padding: 1em;
         position: absolute;
