tweak to the box number changer

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           }
           $('.tilefill').html(html_string);
           $('.tilefill').tilefill();
+          $('.tile').css('border', '1px solid #666');
         });
       });
     </script>
